--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "ipfs-http-client": "^51.0.1",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "web3modal": "^1.9.3"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "^4.2.0",
     "autoprefixer": "^10.3.1",
+    "chai": "^4.3.4",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
+    "ethereum-waffle": "^3.4.0",
+    "hardhat": "^2.5.0",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.7"
   }
