--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "voting-dapp",
+  "name": "votechain",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,6 @@
     "axios": "^0.21.1",
     "ipfs-http-client": "^51.0.1",
     "next": "11.0.1",
-    "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
