--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npx hardhat compile && next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "hardhat test"
+    "test": "hardhat test",
+    "deploy:test": "npx hardhat run scripts/deploy.js --network mumbai"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.0",
@@ -18,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "swr": "^0.5.6",
     "web3modal": "^1.9.3"
   },
   "devDependencies": {
