--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "react-query": "^3.34.7",
     "swr": "^0.5.6",
     "web3modal": "^1.9.3"
   },
